[gd_scene format=3 uid="uid://dtpln8te1f4jw"]

[ext_resource type="Texture2D" uid="uid://355wsgj13pcn" path="res://assets/sprites/ui/side_frame.png" id="1_1pwbc"]
[ext_resource type="Script" uid="uid://bvq4tybahigv5" path="res://scripts/level1.gd" id="1_n5pya"]
[ext_resource type="Texture2D" uid="uid://dj1c8jvlclrag" path="res://assets/sprites/ui/heart_icon.png" id="2_j08sa"]
[ext_resource type="Script" uid="uid://2ij1a58w53g6" path="res://scripts/game_ui.gd" id="2_kypp1"]
[ext_resource type="Texture2D" uid="uid://bfo72fed0vqac" path="res://assets/sprites/menu/mask_face.png" id="2_lha2r"]
[ext_resource type="Texture2D" uid="uid://d1m2f0as27gyp" path="res://assets/sprites/ui/player.png" id="3_68ib6"]
[ext_resource type="Texture2D" uid="uid://dahfe3k1udutk" path="res://assets/sprites/ui/ammo_tray.png" id="5_76cw8"]
[ext_resource type="Texture2D" uid="uid://ddg5khr2xt4ob" path="res://assets/sprites/ui/weapons/normal_gun.png" id="6_m00rq"]
[ext_resource type="Texture2D" uid="uid://chcsnf1wxrdgy" path="res://assets/sprites/ui/btn_shoot_self.png" id="9_j7nyf"]
[ext_resource type="Texture2D" uid="uid://dmen33ctdti7t" path="res://assets/sprites/ui/btn_shoot_mask.png" id="10_xbvxr"]
[ext_resource type="Texture2D" uid="uid://daqw2143yv0dt" path="res://assets/sprites/ui/btn_next_level.png" id="11_bspq0"]
[ext_resource type="Texture2D" uid="uid://bny5dkbuqxqpv" path="res://assets/sprites/ui/weapons/shoot_enemy.png" id="11_njy47"]
[ext_resource type="Texture2D" uid="uid://drpioyuukqeed" path="res://assets/sprites/ui/btn_menu.png" id="12_dqba7"]
[ext_resource type="Texture2D" uid="uid://twvb1t10mw4t" path="res://assets/sprites/ui/panel_empty.png" id="14_kypp1"]
[ext_resource type="Texture2D" uid="uid://cglp51c6vk2xb" path="res://assets/enemys/mask1.png" id="19_ijoxy"]
[ext_resource type="Texture2D" uid="uid://bdirp5lwe0wwm" path="res://assets/sprites/menu/menu_background.png" id="20_t2wor"]
[ext_resource type="Texture2D" uid="uid://dlavljuvdrytf" path="res://assets/sprites/props/table.png" id="21_l40or"]
[ext_resource type="Texture2D" uid="uid://dh50rrb4x8t8r" path="res://assets/sprites/props/chess_board_lvl1.png" id="22_hnhv5"]
[ext_resource type="Texture2D" uid="uid://6jxlpjc26gf0" path="res://assets/sprites/props/glass_lvl1.png" id="23_86um8"]
[ext_resource type="Texture2D" uid="uid://ckraq3l0cipwe" path="res://assets/sprites/props/sigarette_lvl1.png" id="24_hpass"]
[ext_resource type="Texture2D" uid="uid://b34wmb37krw4v" path="res://assets/sprites/props/chess_timer_lvl1.png" id="25_srkvl"]
[ext_resource type="Texture2D" uid="uid://dbb4tistdrdnm" path="res://assets/sprites/props/lamp_lvl1.png" id="26_pgakm"]

[node name="Level1" type="Node2D" unique_id=751449340]
script = ExtResource("1_n5pya")

[node name="GameUI" type="CanvasLayer" parent="." unique_id=355615279]
script = ExtResource("2_kypp1")

[node name="FrameLeft" type="TextureRect" parent="GameUI" unique_id=1053934826]
anchors_preset = -1
anchor_right = 0.13700001
anchor_bottom = 0.120000005
offset_right = -0.090667725
offset_bottom = 0.23999786
texture = ExtResource("1_1pwbc")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="PlayerHP" type="HBoxContainer" parent="GameUI/FrameLeft" unique_id=564573505]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.158
anchor_top = 0.192
anchor_right = 0.818
anchor_bottom = 0.82100004
offset_left = 0.07813072
offset_top = 0.024000168
offset_right = -0.025878906
offset_bottom = 0.961998
grow_horizontal = 2
grow_vertical = 2

[node name="heart_icon" type="TextureRect" parent="GameUI/FrameLeft/PlayerHP" unique_id=876204444]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("2_j08sa")
expand_mode = 1
stretch_mode = 5

[node name="heart_icon2" type="TextureRect" parent="GameUI/FrameLeft/PlayerHP" unique_id=2047416806]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("2_j08sa")
expand_mode = 1
stretch_mode = 5

[node name="Player" type="Sprite2D" parent="GameUI/FrameLeft" unique_id=1674930331]
position = Vector2(198.00002, 39)
scale = Vector2(0.038330063, 0.038330063)
texture = ExtResource("3_68ib6")

[node name="FrameRight" type="TextureRect" parent="GameUI" unique_id=1081991357]
anchors_preset = -1
anchor_left = 0.86100006
anchor_right = 1.0
anchor_bottom = 0.120000005
offset_left = 0.12792969
offset_right = -2.2666016
offset_bottom = 0.23999786
size_flags_horizontal = 8
texture = ExtResource("1_1pwbc")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="EnemyHP" type="HBoxContainer" parent="GameUI/FrameRight" unique_id=1320014203]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.165
anchor_top = 0.192
anchor_right = 0.82400006
anchor_bottom = 0.82100004
offset_left = -0.02601242
offset_top = 0.024000168
offset_right = 0.027664185
offset_bottom = 0.961998
grow_horizontal = 2
grow_vertical = 2

[node name="heart_icon" type="TextureRect" parent="GameUI/FrameRight/EnemyHP" unique_id=1694411596]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("2_j08sa")
expand_mode = 1
stretch_mode = 5

[node name="heart_icon2" type="TextureRect" parent="GameUI/FrameRight/EnemyHP" unique_id=450969204]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("2_j08sa")
expand_mode = 1
stretch_mode = 5

[node name="MaskFace" type="Sprite2D" parent="GameUI/FrameRight" unique_id=1270881310]
position = Vector2(-30.00003, 39)
scale = Vector2(0.08300789, 0.08300789)
texture = ExtResource("2_lha2r")

[node name="AmmoPanel" type="TextureRect" parent="GameUI" unique_id=656991063]
anchors_preset = -1
anchor_left = 0.43100002
anchor_right = 0.564
anchor_bottom = 0.120000005
offset_left = -48.512024
offset_right = 54.271973
offset_bottom = 0.23999786
grow_horizontal = 2
pivot_offset = Vector2(79, 39)
size_flags_horizontal = 8
texture = ExtResource("1_1pwbc")
expand_mode = 1

[node name="TrayBg" type="HBoxContainer" parent="GameUI/AmmoPanel" unique_id=1022322920]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.165
anchor_top = 0.192
anchor_right = 0.82400006
anchor_bottom = 0.82100004
offset_left = -47.007168
offset_top = 0.024000168
offset_right = 49.00882
offset_bottom = 0.961998
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(52, 25)
alignment = 1

[node name="ammo" type="TextureRect" parent="GameUI/AmmoPanel/TrayBg" unique_id=479254261]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("5_76cw8")
expand_mode = 1
stretch_mode = 5

[node name="ammo2" type="TextureRect" parent="GameUI/AmmoPanel/TrayBg" unique_id=1092354498]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("5_76cw8")
expand_mode = 1
stretch_mode = 5

[node name="ammo3" type="TextureRect" parent="GameUI/AmmoPanel/TrayBg" unique_id=270678706]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("5_76cw8")
expand_mode = 1
stretch_mode = 5

[node name="ammo4" type="TextureRect" parent="GameUI/AmmoPanel/TrayBg" unique_id=1750212052]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("5_76cw8")
expand_mode = 1
stretch_mode = 5

[node name="DamageOverlay" type="TextureRect" parent="GameUI" unique_id=894147270]
offset_left = 270.0
offset_top = 141.0
offset_right = 884.0
offset_bottom = 478.0

[node name="TurnIndicator" type="TextureRect" parent="GameUI" unique_id=1926578815]
offset_left = 270.0
offset_top = 141.0
offset_right = 884.0
offset_bottom = 478.0

[node name="MessageContainer" type="CenterContainer" parent="GameUI" unique_id=1435070970]
visible = false
anchors_preset = -1
anchor_left = 0.22700001
anchor_top = 0.20400001
anchor_right = 0.763
anchor_bottom = 0.82400006
offset_left = -0.5040283
offset_top = -0.19200134
offset_right = 0.023986816
offset_bottom = 0.047973633
grow_horizontal = 2
grow_vertical = 2

[node name="InfoPanel" type="TextureRect" parent="GameUI/MessageContainer" unique_id=1816871230]
clip_contents = true
custom_minimum_size = Vector2(363.59, 234.825)
layout_mode = 2
texture = ExtResource("14_kypp1")
expand_mode = 1

[node name="InfoLabel" type="Label" parent="GameUI/MessageContainer/InfoPanel" unique_id=395124825]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 99.0
offset_top = 117.0
offset_right = -102.80499
offset_bottom = -154.89499
grow_horizontal = 2
grow_vertical = 2
text = "ТЕСТ"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ActionsContainer" type="HBoxContainer" parent="GameUI" unique_id=1617391005]
visible = false
offset_left = 424.0
offset_top = 361.0
offset_right = 722.0
offset_bottom = 419.0

[node name="BtnShootSelf" type="TextureButton" parent="GameUI/ActionsContainer" unique_id=235299411]
custom_minimum_size = Vector2(137.985, 0)
layout_mode = 2
texture_normal = ExtResource("9_j7nyf")
ignore_texture_size = true
stretch_mode = 5

[node name="BtnShootMask" type="TextureButton" parent="GameUI/ActionsContainer" unique_id=1948103753]
custom_minimum_size = Vector2(149.42, 0)
layout_mode = 2
texture_normal = ExtResource("10_xbvxr")
ignore_texture_size = true
stretch_mode = 5

[node name="ResultContainer" type="VBoxContainer" parent="GameUI" unique_id=642048188]
z_index = 1
anchors_preset = -1
anchor_left = 0.33600003
anchor_top = 0.333
anchor_right = 0.785
anchor_bottom = 0.71900004
offset_left = 44.92798
offset_top = 7.2160034
offset_right = -185.32
offset_bottom = -21.912018

[node name="BtnNext" type="TextureButton" parent="GameUI/ResultContainer" unique_id=1164470098]
visible = false
custom_minimum_size = Vector2(0, 102.425)
layout_mode = 2
texture_normal = ExtResource("11_bspq0")
ignore_texture_size = true
stretch_mode = 4

[node name="BtnMenu" type="TextureButton" parent="GameUI/ResultContainer" unique_id=543230397]
visible = false
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
texture_normal = ExtResource("12_dqba7")
ignore_texture_size = true
stretch_mode = 4

[node name="WeaponLayer" type="Control" parent="." unique_id=2086521443]
z_index = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PlayerHand" type="Control" parent="WeaponLayer" unique_id=1124863230]
layout_mode = 1
anchor_top = 0.634
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 0.16799927
grow_horizontal = 2
grow_vertical = 0

[node name="ShootEnemy" type="Sprite2D" parent="WeaponLayer/PlayerHand" unique_id=40199190]
z_index = 4
y_sort_enabled = true
position = Vector2(575, 417)
texture = ExtResource("11_njy47")

[node name="NormalGun" type="Sprite2D" parent="WeaponLayer/PlayerHand" unique_id=1978324228]
z_index = 3
position = Vector2(895, 521)
scale = Vector2(0.43376067, 0.4337607)
texture = ExtResource("6_m00rq")

[node name="EnemyHand" type="Control" parent="WeaponLayer" unique_id=909286102]
layout_mode = 1
anchor_top = 0.127
anchor_right = 0.998
anchor_bottom = 0.5
offset_top = -0.29600525
offset_right = 0.30395508

[node name="Parallax2D" type="Parallax2D" parent="WeaponLayer/EnemyHand" unique_id=2130085614]

[node name="Sprite2D" type="Sprite2D" parent="WeaponLayer/EnemyHand/Parallax2D" unique_id=1153407168]
modulate = Color(0.70980394, 0.7411765, 0.9098039, 0.78431374)
z_index = 2
position = Vector2(403.00006, 414.29596)
scale = Vector2(0.16556041, 0.17857142)
texture = ExtResource("23_86um8")

[node name="Sprite2D2" type="Sprite2D" parent="WeaponLayer/EnemyHand/Parallax2D" unique_id=827893758]
modulate = Color(0.70980394, 0.7411765, 0.9098039, 0.78431374)
z_index = 2
position = Vector2(805.00006, 483.29596)
scale = Vector2(0.1898148, 0.17474921)
texture = ExtResource("24_hpass")
flip_h = true

[node name="Sprite2D3" type="Sprite2D" parent="WeaponLayer/EnemyHand/Parallax2D" unique_id=675362214]
modulate = Color(0.70980394, 0.7411765, 0.9098039, 0.78431374)
z_index = 2
position = Vector2(546.0001, 456.29596)
scale = Vector2(0.17447922, 0.12634274)
texture = ExtResource("22_hnhv5")
offset = Vector2(-2, -16)

[node name="Sprite2D4" type="Sprite2D" parent="WeaponLayer/EnemyHand/Parallax2D" unique_id=1310957481]
modulate = Color(1.7136636, 1.7136636, 1.7136636, 1)
position = Vector2(555.00006, -432.70392)
scale = Vector2(0.47093025, 0.53580725)
texture = ExtResource("20_t2wor")

[node name="Sprite2D5" type="Sprite2D" parent="WeaponLayer/EnemyHand/Parallax2D" unique_id=1384672649]
modulate = Color(0.9343507, 1.0145503, 2.3422987, 1)
z_index = 2
position = Vector2(792.56256, 397.5913)
scale = Vector2(0.17635089, 0.19393617)

[node name="Sprite2D6" type="Sprite2D" parent="WeaponLayer/EnemyHand/Parallax2D" unique_id=1997219178]
modulate = Color(0.5194127, 0.5194127, 0.5194127, 1)
z_index = 1
position = Vector2(578, 612.296)
scale = Vector2(0.81315106, 0.84765613)
texture = ExtResource("21_l40or")

[node name="Sprite2D7" type="Sprite2D" parent="WeaponLayer/EnemyHand/Parallax2D" unique_id=992990354]
modulate = Color(0.9343507, 1.0145503, 2.3422987, 1)
z_index = 2
position = Vector2(792.56256, 397.5913)
scale = Vector2(0.17635089, 0.19393617)
texture = ExtResource("26_pgakm")

[node name="Sprite2D8" type="Sprite2D" parent="WeaponLayer/EnemyHand/Parallax2D" unique_id=485856661]
modulate = Color(0.9343507, 1.0145503, 2.3422987, 1)
z_index = 2
position = Vector2(384, 431.296)
scale = Vector2(0.18717448, 0.20738555)
texture = ExtResource("26_pgakm")

[node name="Sprite2D9" type="Sprite2D" parent="WeaponLayer/EnemyHand/Parallax2D" unique_id=2051381211]
modulate = Color(0.49016845, 0.5389713, 1.271014, 0.7137255)
z_index = 2
position = Vector2(669.81195, 452.93317)
scale = Vector2(0.065349124, 0.0690679)
texture = ExtResource("25_srkvl")

[node name="Sprite2D10" type="Sprite2D" parent="WeaponLayer/EnemyHand/Parallax2D" unique_id=535695129]
modulate = Color(0.70980394, 0.7411765, 0.9098039, 0.78431374)
z_index = 2
position = Vector2(326.00006, 434.23346)
scale = Vector2(0.16666664, 0.1475752)
texture = ExtResource("24_hpass")
flip_h = true

[node name="Sprite2D11" type="Sprite2D" parent="WeaponLayer/EnemyHand/Parallax2D" unique_id=428955430]
modulate = Color(0.70980394, 0.7411765, 0.9098039, 0.78431374)
z_index = 2
position = Vector2(730.00006, 450.29596)
scale = Vector2(0.18952778, 0.21428569)
texture = ExtResource("23_86um8")

[node name="MaskEnemy" type="Sprite2D" parent="WeaponLayer/EnemyHand" unique_id=650406359]
position = Vector2(575, 232.29599)
scale = Vector2(0.23825014, 0.23825012)
texture = ExtResource("19_ijoxy")

[node name="ParallaxBackground" type="ParallaxBackground" parent="." unique_id=994489121]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground" unique_id=275945043]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer" unique_id=1284938593]
modulate = Color(1.7136636, 1.7136636, 1.7136636, 1)
position = Vector2(564, -439.00003)
scale = Vector2(0.47093025, 0.5358073)
texture = ExtResource("20_t2wor")
